# perplexity-clone

./: README.md
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  websearch_agent.py
backend/scripts/: mock_agent_events.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
